[back-end]update blog + delete blog + approval blog list [front-end] validate add blog, update blog, fix bug update user, redesign error style delete blog, update blog, create approval page, create update blog page, connect backend-frontend thymeleaf javascript 3:31p.m 19/11/23

--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -677,12 +677,22 @@
             .buttont:hover {
                 background-color: #45a049;
             }
-
+            .buttontt {
+                background-color: #4CAF50;
+                color: white;
+                margin-left:10px;
+                padding: 10px 30px;
+                margin-right: 40px;
+                border: none;
+                cursor: pointer;
+                border-radius: 4px;
+                height:43px;
+            }
         </style>
     </head>
     <body>
         <div th:if="${session.user == null}">
-            <a href="loginnnn.html">Please login to view this page</a>
+            <a href="homelogin">Please login to view this page</a>
         </div>
 
         <div th:if="${session.user != null}">
@@ -709,6 +719,11 @@
                             </a>
                         </button>
                     </div>
+                    <form action="/approval" method="GET" th:if="${user.roleId == 'Lecturer'}">
+                        <div>
+                            <button class="buttontt" type="submit">Approval</button>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="headermb">               
