--- a/src/main/resources/templates/blogdetail.html
+++ b/src/main/resources/templates/blogdetail.html
@@ -698,11 +698,22 @@
                 align-items: center;
                 margin-top:20px;
             }
+            .buttontt {
+                background-color: #4CAF50;
+                color: white;
+                margin-left:10px;
+                padding: 10px 30px;
+                margin-right: 40px;
+                border: none;
+                cursor: pointer;
+                border-radius: 4px;
+                height:43px;
+            }
         </style>
     </head>
     <body>
         <div th:if="${session.user == null}">
-            <a href="loginnnn.html">Please login to view this page</a>
+            <a th:href="@{/homelogin}">Please login to view this page</a>
         </div>
 
         <div th:if="${session.user != null}">
@@ -730,6 +741,11 @@
                         </button>
 
                     </div>
+                    <form action="/approval" method="GET" th:if="${user.roleId == 'Lecturer'}">
+                        <div>
+                            <button class="buttontt" type="submit">Approval</button>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="headermb">               
