--- a/src/main/resources/templates/aprovalblog.html
+++ b/src/main/resources/templates/aprovalblog.html
@@ -814,11 +814,11 @@
                                     <div class="flexx">
                                         <form action="approved" method="post" id="approvedForm"> 
                                             <input type="hidden" name="postId" th:value="${post.postId}"/> 
-                                            <button type="submit" onclick="approvedForm(event)">Approved</button> 
+                                            <button type="submit" onclick="approvedForm(event)">Approve</button> 
                                         </form> 
                                         <form action="denied" method="post" id="deniedForm"> 
                                             <input type="hidden" name="postId" th:value="${post.postId}"/> 
-                                            <button type="submit" onclick="deniedForm(event)">Denied</button> 
+                                            <button type="submit" onclick="deniedForm(event)">Reject</button> 
                                         </form> 
                                     </div>
                                 </td> 
